# dmzcal

./: .gitignore  CLAUDE.md  Python.md  README.md  pi-touch-fix.md  pyproject.toml
.zed/: settings.json
config/: birthdays.example.yaml
deploy/: README-kiosk.md  dmzcal-kiosk.service
scratch/: dim.py
scripts/: install-kiosk.sh
specs/: kiosk-mode.md  plan1.md  spec1.md
src/: main.py
src/dmzcal/: __main__.py  clock.py  config.py  display.py  holidays.py  main.py
tests/: test_clock.py  test_config.py  test_holidays.py  test_main.py
